lab04/Code/syntax.output
State 25 conflicts: 1 shift/reduce
State 27 conflicts: 1 shift/reduce
State 30 conflicts: 1 shift/reduce


Grammar

    0 $accept: Program $end

    1 Program: ExtDefList

    2 ExtDefList: %empty
    3           | ExtDef ExtDefList
    4           | error ExtDefList

    5 ExtDef: Specifier ExtDecList SEMI
    6       | Specifier SEMI
    7       | Specifier FunDec CompSt

    8 ExtDecList: VarDec
    9           | VarDec COMMA ExtDecList

   10 Specifier: TYPE
   11          | StructSpecifier

   12 StructSpecifier: STRUCT OptTag LC DefList RC
   13                | STRUCT Tag

   14 OptTag: %empty
   15       | ID

   16 Tag: ID

   17 VarDec: ID
   18       | VarDec LB INT RB

   19 FunDec: ID LP VarList RP
   20       | ID LP RP

   21 VarList: ParamDec COMMA VarList
   22        | ParamDec

   23 ParamDec: Specifier VarDec

   24 CompSt: LC DefList StmtList RC

   25 StmtList: %empty
   26         | Stmt StmtList
   27         | error StmtList

   28 Stmt: Exp SEMI
   29     | CompSt
   30     | RETURN Exp SEMI
   31     | IF LP Exp RP Stmt
   32     | IF LP Exp RP Stmt ELSE Stmt
   33     | WHILE LP Exp RP Stmt

   34 DefList: %empty
   35        | Def DefList
   36        | error DefList

   37 Def: Specifier DecList SEMI

   38 DecList: Dec
   39        | Dec COMMA DecList

   40 Dec: VarDec
   41    | VarDec ASSIGNOP Exp

   42 Exp: Exp ASSIGNOP Exp
   43    | Exp AND Exp
   44    | Exp OR Exp
   45    | Exp RELOP Exp
   46    | Exp PLUS Exp
   47    | Exp MINUS Exp
   48    | Exp STAR Exp
   49    | Exp DIV Exp
   50    | LP Exp RP
   51    | MINUS Exp
   52    | NOT Exp
   53    | ID LP Args RP
   54    | ID LP RP
   55    | Exp LB Exp RB
   56    | Exp LB error RB
   57    | Exp DOT ID
   58    | ID
   59    | INT
   60    | FLOAT

   61 Args: Exp COMMA Args
   62     | Exp


Terminals, with rules where they appear

$end (0) 0
error (256) 4 27 36 56
STRUCT (258) 12 13
RETURN (259) 30
IF (260) 31 32
ELSE (261) 32
WHILE (262) 33
TYPE (263) 10
SEMI (264) 5 6 28 30 37
COMMA (265) 9 21 39 61
ASSIGNOP (266) 41 42
RELOP (267) 45
PLUS (268) 46
MINUS (269) 47 51
STAR (270) 48
DIV (271) 49
AND (272) 43
OR (273) 44
DOT (274) 57
NOT (275) 52
LP (276) 19 20 31 32 33 50 53 54
RP (277) 19 20 31 32 33 50 53 54
LB (278) 18 55 56
RB (279) 18 55 56
LC (280) 12 24
RC (281) 12 24
ID (282) 15 16 17 19 20 53 54 57 58
INT (283) 18 59
FLOAT (284) 60
LOWER_THAN_ELSE (285)


Nonterminals, with rules where they appear

$accept (31)
    on left: 0
Program (32)
    on left: 1, on right: 0
ExtDefList (33)
    on left: 2 3 4, on right: 1 3 4
ExtDef (34)
    on left: 5 6 7, on right: 3
ExtDecList (35)
    on left: 8 9, on right: 5 9
Specifier (36)
    on left: 10 11, on right: 5 6 7 23 37
StructSpecifier (37)
    on left: 12 13, on right: 11
OptTag (38)
    on left: 14 15, on right: 12
Tag (39)
    on left: 16, on right: 13
VarDec (40)
    on left: 17 18, on right: 8 9 18 23 40 41
FunDec (41)
    on left: 19 20, on right: 7
VarList (42)
    on left: 21 22, on right: 19 21
ParamDec (43)
    on left: 23, on right: 21 22
CompSt (44)
    on left: 24, on right: 7 29
StmtList (45)
    on left: 25 26 27, on right: 24 26 27
Stmt (46)
    on left: 28 29 30 31 32 33, on right: 26 31 32 33
DefList (47)
    on left: 34 35 36, on right: 12 24 35 36
Def (48)
    on left: 37, on right: 35
DecList (49)
    on left: 38 39, on right: 37 39
Dec (50)
    on left: 40 41, on right: 38 39
Exp (51)
    on left: 42 43 44 45 46 47 48 49 50 51 52 53 54 55 56 57 58 59
    60, on right: 28 30 31 32 33 41 42 43 44 45 46 47 48 49 50 51 52
    55 56 57 61 62
Args (52)
    on left: 61 62, on right: 53 61


State 0

    0 $accept: . Program $end

    error   shift, and go to state 1
    STRUCT  shift, and go to state 2
    TYPE    shift, and go to state 3

    $end  reduce using rule 2 (ExtDefList)

    Program          go to state 4
    ExtDefList       go to state 5
    ExtDef           go to state 6
    Specifier        go to state 7
    StructSpecifier  go to state 8


State 1

    4 ExtDefList: error . ExtDefList

    error   shift, and go to state 1
    STRUCT  shift, and go to state 2
    TYPE    shift, and go to state 3

    $end  reduce using rule 2 (ExtDefList)

    ExtDefList       go to state 9
    ExtDef           go to state 6
    Specifier        go to state 7
    StructSpecifier  go to state 8


State 2

   12 StructSpecifier: STRUCT . OptTag LC DefList RC
   13                | STRUCT . Tag

    ID  shift, and go to state 10

    $default  reduce using rule 14 (OptTag)

    OptTag  go to state 11
    Tag     go to state 12


State 3

   10 Specifier: TYPE .

    $default  reduce using rule 10 (Specifier)


State 4

    0 $accept: Program . $end

    $end  shift, and go to state 13


State 5

    1 Program: ExtDefList .

    $default  reduce using rule 1 (Program)


State 6

    3 ExtDefList: ExtDef . ExtDefList

    error   shift, and go to state 1
    STRUCT  shift, and go to state 2
    TYPE    shift, and go to state 3

    $end  reduce using rule 2 (ExtDefList)

    ExtDefList       go to state 14
    ExtDef           go to state 6
    Specifier        go to state 7
    StructSpecifier  go to state 8


State 7

    5 ExtDef: Specifier . ExtDecList SEMI
    6       | Specifier . SEMI
    7       | Specifier . FunDec CompSt

    SEMI  shift, and go to state 15
    ID    shift, and go to state 16

    ExtDecList  go to state 17
    VarDec      go to state 18
    FunDec      go to state 19


State 8

   11 Specifier: StructSpecifier .

    $default  reduce using rule 11 (Specifier)


State 9

    4 ExtDefList: error ExtDefList .

    $default  reduce using rule 4 (ExtDefList)


State 10

   15 OptTag: ID .
   16 Tag: ID .

    LC        reduce using rule 15 (OptTag)
    $default  reduce using rule 16 (Tag)


State 11

   12 StructSpecifier: STRUCT OptTag . LC DefList RC

    LC  shift, and go to state 20


State 12

   13 StructSpecifier: STRUCT Tag .

    $default  reduce using rule 13 (StructSpecifier)


State 13

    0 $accept: Program $end .

    $default  accept


State 14

    3 ExtDefList: ExtDef ExtDefList .

    $default  reduce using rule 3 (ExtDefList)


State 15

    6 ExtDef: Specifier SEMI .

    $default  reduce using rule 6 (ExtDef)


State 16

   17 VarDec: ID .
   19 FunDec: ID . LP VarList RP
   20       | ID . LP RP

    LP  shift, and go to state 21

    $default  reduce using rule 17 (VarDec)


State 17

    5 ExtDef: Specifier ExtDecList . SEMI

    SEMI  shift, and go to state 22


State 18

    8 ExtDecList: VarDec .
    9           | VarDec . COMMA ExtDecList
   18 VarDec: VarDec . LB INT RB

    COMMA  shift, and go to state 23
    LB     shift, and go to state 24

    $default  reduce using rule 8 (ExtDecList)


State 19

    7 ExtDef: Specifier FunDec . CompSt

    LC  shift, and go to state 25

    CompSt  go to state 26


State 20

   12 StructSpecifier: STRUCT OptTag LC . DefList RC

    error   shift, and go to state 27
    STRUCT  shift, and go to state 2
    TYPE    shift, and go to state 3

    RC  reduce using rule 34 (DefList)

    Specifier        go to state 28
    StructSpecifier  go to state 8
    DefList          go to state 29
    Def              go to state 30


State 21

   19 FunDec: ID LP . VarList RP
   20       | ID LP . RP

    STRUCT  shift, and go to state 2
    TYPE    shift, and go to state 3
    RP      shift, and go to state 31

    Specifier        go to state 32
    StructSpecifier  go to state 8
    VarList          go to state 33
    ParamDec         go to state 34


State 22

    5 ExtDef: Specifier ExtDecList SEMI .

    $default  reduce using rule 5 (ExtDef)


State 23

    9 ExtDecList: VarDec COMMA . ExtDecList

    ID  shift, and go to state 35

    ExtDecList  go to state 36
    VarDec      go to state 18


State 24

   18 VarDec: VarDec LB . INT RB

    INT  shift, and go to state 37


State 25

   24 CompSt: LC . DefList StmtList RC

    error   shift, and go to state 27
    STRUCT  shift, and go to state 2
    TYPE    shift, and go to state 3

    error   [reduce using rule 34 (DefList)]
    RETURN  reduce using rule 34 (DefList)
    IF      reduce using rule 34 (DefList)
    WHILE   reduce using rule 34 (DefList)
    MINUS   reduce using rule 34 (DefList)
    NOT     reduce using rule 34 (DefList)
    LP      reduce using rule 34 (DefList)
    LC      reduce using rule 34 (DefList)
    RC      reduce using rule 34 (DefList)
    ID      reduce using rule 34 (DefList)
    INT     reduce using rule 34 (DefList)
    FLOAT   reduce using rule 34 (DefList)

    Specifier        go to state 28
    StructSpecifier  go to state 8
    DefList          go to state 38
    Def              go to state 30


State 26

    7 ExtDef: Specifier FunDec CompSt .

    $default  reduce using rule 7 (ExtDef)


State 27

   36 DefList: error . DefList

    error   shift, and go to state 27
    STRUCT  shift, and go to state 2
    TYPE    shift, and go to state 3

    error   [reduce using rule 34 (DefList)]
    RETURN  reduce using rule 34 (DefList)
    IF      reduce using rule 34 (DefList)
    WHILE   reduce using rule 34 (DefList)
    MINUS   reduce using rule 34 (DefList)
    NOT     reduce using rule 34 (DefList)
    LP      reduce using rule 34 (DefList)
    LC      reduce using rule 34 (DefList)
    RC      reduce using rule 34 (DefList)
    ID      reduce using rule 34 (DefList)
    INT     reduce using rule 34 (DefList)
    FLOAT   reduce using rule 34 (DefList)

    Specifier        go to state 28
    StructSpecifier  go to state 8
    DefList          go to state 39
    Def              go to state 30


State 28

   37 Def: Specifier . DecList SEMI

    ID  shift, and go to state 35

    VarDec   go to state 40
    DecList  go to state 41
    Dec      go to state 42


State 29

   12 StructSpecifier: STRUCT OptTag LC DefList . RC

    RC  shift, and go to state 43


State 30

   35 DefList: Def . DefList

    error   shift, and go to state 27
    STRUCT  shift, and go to state 2
    TYPE    shift, and go to state 3

    error   [reduce using rule 34 (DefList)]
    RETURN  reduce using rule 34 (DefList)
    IF      reduce using rule 34 (DefList)
    WHILE   reduce using rule 34 (DefList)
    MINUS   reduce using rule 34 (DefList)
    NOT     reduce using rule 34 (DefList)
    LP      reduce using rule 34 (DefList)
    LC      reduce using rule 34 (DefList)
    RC      reduce using rule 34 (DefList)
    ID      reduce using rule 34 (DefList)
    INT     reduce using rule 34 (DefList)
    FLOAT   reduce using rule 34 (DefList)

    Specifier        go to state 28
    StructSpecifier  go to state 8
    DefList          go to state 44
    Def              go to state 30


State 31

   20 FunDec: ID LP RP .

    $default  reduce using rule 20 (FunDec)


State 32

   23 ParamDec: Specifier . VarDec

    ID  shift, and go to state 35

    VarDec  go to state 45


State 33

   19 FunDec: ID LP VarList . RP

    RP  shift, and go to state 46


State 34

   21 VarList: ParamDec . COMMA VarList
   22        | ParamDec .

    COMMA  shift, and go to state 47

    $default  reduce using rule 22 (VarList)


State 35

   17 VarDec: ID .

    $default  reduce using rule 17 (VarDec)


State 36

    9 ExtDecList: VarDec COMMA ExtDecList .

    $default  reduce using rule 9 (ExtDecList)


State 37

   18 VarDec: VarDec LB INT . RB

    RB  shift, and go to state 48


State 38

   24 CompSt: LC DefList . StmtList RC

    error   shift, and go to state 49
    RETURN  shift, and go to state 50
    IF      shift, and go to state 51
    WHILE   shift, and go to state 52
    MINUS   shift, and go to state 53
    NOT     shift, and go to state 54
    LP      shift, and go to state 55
    LC      shift, and go to state 25
    ID      shift, and go to state 56
    INT     shift, and go to state 57
    FLOAT   shift, and go to state 58

    RC  reduce using rule 25 (StmtList)

    CompSt    go to state 59
    StmtList  go to state 60
    Stmt      go to state 61
    Exp       go to state 62


State 39

   36 DefList: error DefList .

    $default  reduce using rule 36 (DefList)


State 40

   18 VarDec: VarDec . LB INT RB
   40 Dec: VarDec .
   41    | VarDec . ASSIGNOP Exp

    ASSIGNOP  shift, and go to state 63
    LB        shift, and go to state 24

    $default  reduce using rule 40 (Dec)


State 41

   37 Def: Specifier DecList . SEMI

    SEMI  shift, and go to state 64


State 42

   38 DecList: Dec .
   39        | Dec . COMMA DecList

    COMMA  shift, and go to state 65

    $default  reduce using rule 38 (DecList)


State 43

   12 StructSpecifier: STRUCT OptTag LC DefList RC .

    $default  reduce using rule 12 (StructSpecifier)


State 44

   35 DefList: Def DefList .

    $default  reduce using rule 35 (DefList)


State 45

   18 VarDec: VarDec . LB INT RB
   23 ParamDec: Specifier VarDec .

    LB  shift, and go to state 24

    $default  reduce using rule 23 (ParamDec)


State 46

   19 FunDec: ID LP VarList RP .

    $default  reduce using rule 19 (FunDec)


State 47

   21 VarList: ParamDec COMMA . VarList

    STRUCT  shift, and go to state 2
    TYPE    shift, and go to state 3

    Specifier        go to state 32
    StructSpecifier  go to state 8
    VarList          go to state 66
    ParamDec         go to state 34


State 48

   18 VarDec: VarDec LB INT RB .

    $default  reduce using rule 18 (VarDec)


State 49

   27 StmtList: error . StmtList

    error   shift, and go to state 49
    RETURN  shift, and go to state 50
    IF      shift, and go to state 51
    WHILE   shift, and go to state 52
    MINUS   shift, and go to state 53
    NOT     shift, and go to state 54
    LP      shift, and go to state 55
    LC      shift, and go to state 25
    ID      shift, and go to state 56
    INT     shift, and go to state 57
    FLOAT   shift, and go to state 58

    RC  reduce using rule 25 (StmtList)

    CompSt    go to state 59
    StmtList  go to state 67
    Stmt      go to state 61
    Exp       go to state 62


State 50

   30 Stmt: RETURN . Exp SEMI

    MINUS  shift, and go to state 53
    NOT    shift, and go to state 54
    LP     shift, and go to state 55
    ID     shift, and go to state 56
    INT    shift, and go to state 57
    FLOAT  shift, and go to state 58

    Exp  go to state 68


State 51

   31 Stmt: IF . LP Exp RP Stmt
   32     | IF . LP Exp RP Stmt ELSE Stmt

    LP  shift, and go to state 69


State 52

   33 Stmt: WHILE . LP Exp RP Stmt

    LP  shift, and go to state 70


State 53

   51 Exp: MINUS . Exp

    MINUS  shift, and go to state 53
    NOT    shift, and go to state 54
    LP     shift, and go to state 55
    ID     shift, and go to state 56
    INT    shift, and go to state 57
    FLOAT  shift, and go to state 58

    Exp  go to state 71


State 54

   52 Exp: NOT . Exp

    MINUS  shift, and go to state 53
    NOT    shift, and go to state 54
    LP     shift, and go to state 55
    ID     shift, and go to state 56
    INT    shift, and go to state 57
    FLOAT  shift, and go to state 58

    Exp  go to state 72


State 55

   50 Exp: LP . Exp RP

    MINUS  shift, and go to state 53
    NOT    shift, and go to state 54
    LP     shift, and go to state 55
    ID     shift, and go to state 56
    INT    shift, and go to state 57
    FLOAT  shift, and go to state 58

    Exp  go to state 73


State 56

   53 Exp: ID . LP Args RP
   54    | ID . LP RP
   58    | ID .

    LP  shift, and go to state 74

    $default  reduce using rule 58 (Exp)


State 57

   59 Exp: INT .

    $default  reduce using rule 59 (Exp)


State 58

   60 Exp: FLOAT .

    $default  reduce using rule 60 (Exp)


State 59

   29 Stmt: CompSt .

    $default  reduce using rule 29 (Stmt)


State 60

   24 CompSt: LC DefList StmtList . RC

    RC  shift, and go to state 75


State 61

   26 StmtList: Stmt . StmtList

    error   shift, and go to state 49
    RETURN  shift, and go to state 50
    IF      shift, and go to state 51
    WHILE   shift, and go to state 52
    MINUS   shift, and go to state 53
    NOT     shift, and go to state 54
    LP      shift, and go to state 55
    LC      shift, and go to state 25
    ID      shift, and go to state 56
    INT     shift, and go to state 57
    FLOAT   shift, and go to state 58

    RC  reduce using rule 25 (StmtList)

    CompSt    go to state 59
    StmtList  go to state 76
    Stmt      go to state 61
    Exp       go to state 62


State 62

   28 Stmt: Exp . SEMI
   42 Exp: Exp . ASSIGNOP Exp
   43    | Exp . AND Exp
   44    | Exp . OR Exp
   45    | Exp . RELOP Exp
   46    | Exp . PLUS Exp
   47    | Exp . MINUS Exp
   48    | Exp . STAR Exp
   49    | Exp . DIV Exp
   55    | Exp . LB Exp RB
   56    | Exp . LB error RB
   57    | Exp . DOT ID

    SEMI      shift, and go to state 77
    ASSIGNOP  shift, and go to state 78
    RELOP     shift, and go to state 79
    PLUS      shift, and go to state 80
    MINUS     shift, and go to state 81
    STAR      shift, and go to state 82
    DIV       shift, and go to state 83
    AND       shift, and go to state 84
    OR        shift, and go to state 85
    DOT       shift, and go to state 86
    LB        shift, and go to state 87


State 63

   41 Dec: VarDec ASSIGNOP . Exp

    MINUS  shift, and go to state 53
    NOT    shift, and go to state 54
    LP     shift, and go to state 55
    ID     shift, and go to state 56
    INT    shift, and go to state 57
    FLOAT  shift, and go to state 58

    Exp  go to state 88


State 64

   37 Def: Specifier DecList SEMI .

    $default  reduce using rule 37 (Def)


State 65

   39 DecList: Dec COMMA . DecList

    ID  shift, and go to state 35

    VarDec   go to state 40
    DecList  go to state 89
    Dec      go to state 42


State 66

   21 VarList: ParamDec COMMA VarList .

    $default  reduce using rule 21 (VarList)


State 67

   27 StmtList: error StmtList .

    $default  reduce using rule 27 (StmtList)


State 68

   30 Stmt: RETURN Exp . SEMI
   42 Exp: Exp . ASSIGNOP Exp
   43    | Exp . AND Exp
   44    | Exp . OR Exp
   45    | Exp . RELOP Exp
   46    | Exp . PLUS Exp
   47    | Exp . MINUS Exp
   48    | Exp . STAR Exp
   49    | Exp . DIV Exp
   55    | Exp . LB Exp RB
   56    | Exp . LB error RB
   57    | Exp . DOT ID

    SEMI      shift, and go to state 90
    ASSIGNOP  shift, and go to state 78
    RELOP     shift, and go to state 79
    PLUS      shift, and go to state 80
    MINUS     shift, and go to state 81
    STAR      shift, and go to state 82
    DIV       shift, and go to state 83
    AND       shift, and go to state 84
    OR        shift, and go to state 85
    DOT       shift, and go to state 86
    LB        shift, and go to state 87


State 69

   31 Stmt: IF LP . Exp RP Stmt
   32     | IF LP . Exp RP Stmt ELSE Stmt

    MINUS  shift, and go to state 53
    NOT    shift, and go to state 54
    LP     shift, and go to state 55
    ID     shift, and go to state 56
    INT    shift, and go to state 57
    FLOAT  shift, and go to state 58

    Exp  go to state 91


State 70

   33 Stmt: WHILE LP . Exp RP Stmt

    MINUS  shift, and go to state 53
    NOT    shift, and go to state 54
    LP     shift, and go to state 55
    ID     shift, and go to state 56
    INT    shift, and go to state 57
    FLOAT  shift, and go to state 58

    Exp  go to state 92


State 71

   42 Exp: Exp . ASSIGNOP Exp
   43    | Exp . AND Exp
   44    | Exp . OR Exp
   45    | Exp . RELOP Exp
   46    | Exp . PLUS Exp
   47    | Exp . MINUS Exp
   48    | Exp . STAR Exp
   49    | Exp . DIV Exp
   51    | MINUS Exp .
   55    | Exp . LB Exp RB
   56    | Exp . LB error RB
   57    | Exp . DOT ID

    STAR  shift, and go to state 82
    DIV   shift, and go to state 83
    DOT   shift, and go to state 86
    LB    shift, and go to state 87

    $default  reduce using rule 51 (Exp)


State 72

   42 Exp: Exp . ASSIGNOP Exp
   43    | Exp . AND Exp
   44    | Exp . OR Exp
   45    | Exp . RELOP Exp
   46    | Exp . PLUS Exp
   47    | Exp . MINUS Exp
   48    | Exp . STAR Exp
   49    | Exp . DIV Exp
   52    | NOT Exp .
   55    | Exp . LB Exp RB
   56    | Exp . LB error RB
   57    | Exp . DOT ID

    DOT  shift, and go to state 86
    LB   shift, and go to state 87

    $default  reduce using rule 52 (Exp)


State 73

   42 Exp: Exp . ASSIGNOP Exp
   43    | Exp . AND Exp
   44    | Exp . OR Exp
   45    | Exp . RELOP Exp
   46    | Exp . PLUS Exp
   47    | Exp . MINUS Exp
   48    | Exp . STAR Exp
   49    | Exp . DIV Exp
   50    | LP Exp . RP
   55    | Exp . LB Exp RB
   56    | Exp . LB error RB
   57    | Exp . DOT ID
